fix: align 'required time' with 'recipe item'

--- a/src/styles/item-recipe.scss
+++ b/src/styles/item-recipe.scss
@@ -24,7 +24,8 @@
 .time-sand-icon {
   display: inline-block;
   justify-self: center;
-  width: 24px;
-  height: 24px;
+  width: 32px;
+  height: 32px;
   background: url('/src/assets/svg/timer-sand-complete.svg') no-repeat;
+  background-position: center;
 }
